fix: buttons on the bottom are not well aligned

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -12,7 +12,7 @@ body {
 
 html {
   /* Should be kept in line with the constant of width in the constants.js file */
-  min-width: 360px;
+  min-width: 660px;
 }
 
 #root {
